Fixed book spacing
App.scss
-- Found and set the media query to force extra width to the container
so that all three books will show in a row

index.scss
-- Added style for get-button

GetBooks.js
-- Added className="book-wrapper" to the Book component
-- Added className="get-button" to the Get books button

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,12 @@ $warning: #f1e681;
 $error: #f08181;
 $charcoal: #ccc;
 
+@media (min-width: 1200px){
+  .container {
+    max-width: 90%;
+  }
+}
+
 .flash-success,
 .flash-warning,
 .flash-error {
