--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -48,3 +48,8 @@ p {
   justify-content: center;
   align-items: center;
 }
+
+.get-button {
+  display: flex;
+  justify-content: center;
+}
